添加小图标链接

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,114 +17,141 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
+    <!-- Bootstrap core JavaScript -->
+
+    <script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+
+
+    <!-- fancyBox -->
+    <link rel="stylesheet" href="/assets/fancy/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen"/>
+    <script type="text/javascript" src="/assets/fancy/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+
+
     <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--[if lt IE 9]>
+    <script src="/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="http://libs.useso.com/js/html5shiv/3.7/html5shiv.js"></script>
-      <script src="http://libs.useso.com/js/respond.js/1.4.2/respond.min.js"></script>
+    <script src="http://libs.useso.com/js/html5shiv/3.7/html5shiv.js"></script>
+    <script src="http://libs.useso.com/js/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- Static navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+<!-- Static navbar -->
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">CHRISTEN</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">CHRISTEN</a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="about.html">About</a></li>
+                <li><a href="work.html">Work</a></li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
     </div>
+</div>
 
 
-	<div id="aboutwrap">
-	    <div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-lg-offset-3">
-				</div>
-			</div><!--/row -->
-	    </div> <!-- /container -->
-	</div><!--/aboutwrap -->
-	
-	<div class="container">
-		<div class="row left mt mb">
-			<div class="col-lg-8 col-lg-offset-2">
-				<h2>Christen</h2>
-                <p class="justify">My name is <a href="http://chenzixin.com">Chen Zixin</a><sup><i class="fa fa-external-link fa-fw"></i></sup>, I am a Chinese software engineer currently living in Dongcheng District of Beijing with my wifi and a cat.</p>
+<div id="aboutwrap">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-lg-offset-3">
+            </div>
+        </div>
+        <!--/row -->
+    </div>
+    <!-- /container -->
+</div>
+<!--/aboutwrap -->
 
-                <p class="justify">When I was young, I wanted to be a lawyer. That was before I got a job as a game editor in <a href="http://www.pconline.cn">PConline</a><sup><i class="fa fa-external-link fa-fw"></i></sup> since early 2004. From then on, I seized the good opportunity to take part in web application design, and interact with programers. As time goes on, I knew I would be a developer. I never stopped writing code since May 25, 2007. Many thanks to Alan, Neil and Guitang Yang.</p>
+<div class="container">
+    <div class="row left mt mb">
+        <div class="col-lg-8 col-lg-offset-2">
+            <h2>Christen</h2>
 
-                <p class="justify">I still enjoy Chinese Ancient Culture and Hard Pen Calligraphic. It’s probably because I used to be a liberal art student in <a href="http://www.hust.edu.cn">Hust</a><sup><i class="fa fa-external-link fa-fw"></i></sup>.</p>
+            <p class="justify">My name is <a href="http://chenzixin.com">Chen Zixin</a><sup><i
+                    class="fa fa-external-link fa-fw"></i></sup>, I am a Chinese software engineer currently living in
+                Dongcheng District of Beijing with my wifi and a cat.</p>
 
-                <p class="justify">You can contact me via email: admin#chenzixin.com</p>
-                </div>
+            <p class="justify">When I was young, I wanted to be a lawyer. That was before I got a job as a game editor
+                in <a href="http://www.pconline.cn">PConline</a><sup><i class="fa fa-external-link fa-fw"></i></sup>
+                since early 2004. From then on, I seized the good opportunity to take part in web application design,
+                and interact with programers. As time goes on, I knew I would be a developer. I never stopped writing
+                code since May 25, 2007. Many thanks to Alan, Neil and Guitang Yang.</p>
 
-		</div><!--/row -->
-	</div><!--/container -->
-	
-	<div id="social">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-mobile-phone"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-google-plus"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="http://chenzixin.com"><i class="fa fa-wordpress"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-qq"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-wechat"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="http://weibo.com/chenzixin"><i class="fa fa-weibo"></i></a>
-				</div>
+            <p class="justify">I still enjoy Chinese Ancient Culture and Hard Pen Calligraphic. It’s probably because I
+                used to be a liberal art student in <a href="http://www.hust.edu.cn">Hust</a><sup><i
+                        class="fa fa-external-link fa-fw"></i></sup>.</p>
 
-			</div>
-		</div>
-	</div>
+            <p class="justify">You can contact me via email: admin#chenzixin.com</p>
+        </div>
 
-    <div id="footerwrap">
-        <div class="container">
-            <div class="row centered">
-                <div class="col-lg-4">
-                    <p><b>WEB DEVELOPER & TECHNICAL SUPPORT</b></p>
-                </div>
+    </div>
+    <!--/row -->
+</div>
+<!--/container -->
 
-                <div class="col-lg-4">
-                    <p>Living in the terrible Beijing.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>admin#<a href="http://chenzixin.com">chenzixin.com</a></p>
-                </div>
+<div id="social">
+    <div class="container">
+        <div class="row centered">
+            <div class="col-lg-2">
+                <a href="fav/mobile/"><i class="fa fa-mobile-phone" data-toggle="modal"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a href="/fav/google/"><i class="fa fa-google-plus"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a href="http://chenzixin.com"><i class="fa fa-wordpress"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a class="fancybox" rel="group" href="/assets/img/fav/QQ-QR.jpg"><i class="fa fa-qq"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a class="fancybox" rel="group" href="/assets/img/fav/Wechat-QR.jpg"><i class="fa fa-wechat"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a href="http://weibo.com/chenzixin"><i class="fa fa-weibo"></i></a>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div id="footerwrap">
+    <div class="container">
+        <div class="row centered">
+            <div class="col-lg-4">
+                <p><b>WEB DEVELOPER & TECHNICAL SUPPORT</b></p>
+            </div>
+
+            <div class="col-lg-4">
+                <p>Living in the terrible Beijing.</p>
+            </div>
+            <div class="col-lg-4">
+                <p>admin#<a href="http://chenzixin.com">chenzixin.com</a></p>
             </div>
         </div>
     </div>
-	
+</div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+<!-- Placed at the end of the document so the pages load faster -->
+<script type="text/javascript">
+    $(document).ready(function () {
+        $(".fancybox").fancybox();
+    });
+</script>
+</body>
 </html>
