--- a/index.html
+++ b/index.html
@@ -114,23 +114,23 @@
         <div class="container">
             <div class="row centered">
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-leanpub"></i></a>
+                    <a href="/fav/book"><i class="fa fa-leanpub"></i></a>
                     <!-- <a href="#"><i class="glyphicon glyphicon-book"></i></a>-->
                 </div>
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-music"></i></a>
+                    <a href="/fav/music"><i class="fa fa-music"></i></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-camera-retro"></i></a>
+                    <a href="/fav/photo/"><i class="fa fa-camera-retro"></i></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-film"></i></a>
+                    <a href="/fav/movie/"><i class="fa fa-film"></i></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-automobile"></i></a>
+                    <a href="/fav/auto/"><i class="fa fa-automobile"></i></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-child"></i></a>
+                    <a href="/fav/baby"><i class="fa fa-child"></i></a>
                 </div>
 
             </div>
