--- a/work.html
+++ b/work.html
@@ -177,19 +177,19 @@
         <div class="container">
             <div class="row centered">
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-apple"></i></a>
+                    <a href="/doc/soft/#docs/osx"><i class="fa fa-apple"></i></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-windows"></i></a>
+                    <a href="/doc/soft/#docs/windows"><i class="fa fa-windows"></i></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-linux"></i></a>
+                    <a href="/doc/soft/#docs/linux"><i class="fa fa-linux"></i></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-android"></i></a>
+                    <a href="/doc/soft/#docs/android"><i class="fa fa-android"></i></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-cloud"></i></a>
+                    <a href="/fav/cloud/"><i class="fa fa-cloud"></i></a>
                 </div>
                 <div class="col-lg-2">
                     <a href="https://github.com/hiclick/hiclick.github.com"><i class="fa fa-github"></i></a>
