--- a/work.html
+++ b/work.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/img/favicon.ico">
+    <!-- third-generation iPad with high-resolution Retina display: -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/img/favicon144.png">
+    <!-- iPhone with high-resolution Retina display: -->
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/img/favicon114.png">
+    <!-- first- and second-generation iPad: -->
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/img/favicon72.png">
+    <!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+    <link rel="apple-touch-icon-precomposed" href="/assets/img/favicon57.png">
+    <!-- basic favicon -->
+    <link rel="shortcut icon" href="/assets/img/favicon.png">
 
     <title>Work | Christen Note</title>
 
@@ -18,210 +27,217 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--[if lt IE 9]>
+    <script src="/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="http://libs.useso.com/js/html5shiv/3.7/html5shiv.js"></script>
-      <script src="http://libs.useso.com/js/respond.js/1.4.2/respond.min.js"></script>
+    <script src="http://libs.useso.com/js/html5shiv/3.7/html5shiv.js"></script>
+    <script src="http://libs.useso.com/js/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- Static navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+<!-- Static navbar -->
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">CHRISTEN</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">CHRISTEN</a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li class="active"><a href="work.html">Work</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
-
-	<div id="workwrap">
-	    <div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-lg-offset-3">
-					<!--<h1>Resume</h1>-->
-					<!--<h4>ROLE: R&D Manager</h4>-->
-				</div>
-			</div><!--/row -->
-	    </div> <!-- /container -->
-	</div><!--/workwrap -->
-	
-	<section id="works"></section>
-	<div class="container">
-		<div class="row left mt mb">
-            <h4>Focus</h4>
-            <ul style="margin-left:15px">
-                <li>Advertising Optimization</li>
-                <li>HTML5 / Flash / JavaScript / CSS</li>
-                <li>Java / Python / Groovy / PHP</li>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li class="active"><a href="work.html">Work</a></li>
             </ul>
-
-            <h4 class="space">Brief</h4>
-
-            <table class="table table-bordered table-striped table-hover">
-                <tbody>
-                <tr>
-                    <td>PCgroup</td>
-                    <td>2007.03 &#8211; Now</td>
-                    <td>Beijing Haidian</td>
-                    <td>R&amp;D Mananger</td>
-                </tr>
-                <tr>
-                    <td>PConline</td>
-                    <td>2006.08 &#8211; 2007.03</td>
-                    <td>Beijing Haidian</td>
-                    <td>Technical Support</td>
-                </tr>
-                <tr>
-                    <td>PCgames</td>
-                    <td>2004.08 &#8211; 2006.08</td>
-                    <td>Shanghai Xuhui</td>
-                    <td>Senior Editor</td>
-                </tr>
-                <tr>
-                    <td>PCgames</td>
-                    <td>2004.02 &#8211; 2004.08</td>
-                    <td>Guangzhou Tianhe</td>
-                    <td>Editor</td>
-                </tr>
-                </tbody>
-            </table>
-
-            <h4 class="space">Works</h4>
-
-            <table class="table table-striped">
-                <tr>
-                    <td>Tenement</td>
-                    <td>Java + Struts + Versant Open Access JDO + Resin</td>
-                    <td>Code</td>
-                </tr>
-
-                <tr>
-                    <td>iTouch</td>
-                    <td>Java + Struts + JDO + Spring1.2 + AS2.0 + Resin</td>
-                    <td>Code</td>
-                </tr>
-
-                <tr>
-                    <td>Play</td>
-                    <td>Java + Struts + JDO + AS3.0 + Resin</td>
-                    <td>Code</td>
-                </tr>
+        </div>
+        <!--/.nav-collapse -->
+    </div>
+</div>
 
 
-                <tr>
-                    <td><a href="http://mobile.pconline.com.cn/review/0806/1325149.html"  target="_blank">Dopod Diamond Emulator</a></td>
-                    <td>ActionScript 3.0</td>
-                    <td>Code</td>
-                </tr>
+<div id="workwrap">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-lg-offset-3">
+                <!--<h1>Resume</h1>-->
+                <!--<h4>ROLE: R&D Manager</h4>-->
+            </div>
+        </div>
+        <!--/row -->
+    </div>
+    <!-- /container -->
+</div>
+<!--/workwrap -->
 
-                <tr>
-                    <td>Meeting Room</td>
-                    <td>Java + Spring2.5 + ExtJS + jQuery + MySQL</td>
-                    <td>Code</td>
-                </tr>
+<section id="works"></section>
+<div class="container">
+    <div class="row left mt mb">
+        <h4>Focus</h4>
+        <ul style="margin-left:15px">
+            <li>Advertising Optimization</li>
+            <li>HTML5 / Flash / JavaScript / CSS</li>
+            <li>Java / Python / Groovy / PHP</li>
+        </ul>
 
-                <tr>
-                    <td>Work Orders</td>
-                    <td> Java + Spring2.5 + OpenJPA + Resin + Oracle</td>
-                    <td>PM</td>
-                </tr>
+        <h4 class="space">Brief</h4>
 
-                <tr>
-                    <td><a href="http://health.pcbaby.com.cn/" target="_blank">PCbaby Healthlib</a></td>
-                    <td>Java + Spring2.5 + MySQL + Memcache</td>
-                    <td>PM</td>
-                </tr>
+        <table class="table table-bordered table-striped table-hover">
+            <tbody>
+            <tr>
+                <td>PCgroup</td>
+                <td>2007.03 &#8211; Now</td>
+                <td>Beijing Haidian</td>
+                <td>R&amp;D Mananger</td>
+            </tr>
+            <tr>
+                <td>PConline</td>
+                <td>2006.08 &#8211; 2007.03</td>
+                <td>Beijing Haidian</td>
+                <td>Technical Support</td>
+            </tr>
+            <tr>
+                <td>PCgames</td>
+                <td>2004.08 &#8211; 2006.08</td>
+                <td>Shanghai Xuhui</td>
+                <td>Senior Editor</td>
+            </tr>
+            <tr>
+                <td>PCgames</td>
+                <td>2004.02 &#8211; 2004.08</td>
+                <td>Guangzhou Tianhe</td>
+                <td>Editor</td>
+            </tr>
+            </tbody>
+        </table>
 
-                <tr>
-                    <td><a href="http://product.pcbaby.com.cn/" target="_blank">PCbaby Product</a></td>
-                    <td>Java + Spring2.5 + EAV + ExtJS + MySQL + Memcache</td>
-                    <td>PM</td>
-                </tr>
+        <h4 class="space">Works</h4>
 
-                <tr>
-                    <td>NetBench</td>
-                    <td>Java + Spring3.0 + ExtJS + MySQL</td>
-                    <td>PM</td>
-                </tr>
+        <table class="table table-striped">
+            <tr>
+                <td>Tenement</td>
+                <td>Java + Struts + Versant Open Access JDO + Resin</td>
+                <td>Code</td>
+            </tr>
 
-                <tr>
-                    <td><a href="https://github.com/chenzixin/Lucky5" target="_blank">Lucky5</a></td>
-                    <td>HTML5 + CSS3 + Impress + jQuery</td>
-                    <td>PM</td>
-                </tr>
+            <tr>
+                <td>iTouch</td>
+                <td>Java + Struts + JDO + Spring1.2 + AS2.0 + Resin</td>
+                <td>Code</td>
+            </tr>
 
-            </table>
+            <tr>
+                <td>Play</td>
+                <td>Java + Struts + JDO + AS3.0 + Resin</td>
+                <td>Code</td>
+            </tr>
 
-		</div><!--/row -->
-	</div><!--/container -->
 
-    <div id="social">
-        <div class="container">
-            <div class="row centered">
-                <div class="col-lg-2">
-                    <a href="/doc/soft/#docs/osx"><i class="fa fa-apple"></i></a>
-                </div>
-                <div class="col-lg-2">
-                    <a href="/doc/soft/#docs/windows"><i class="fa fa-windows"></i></a>
-                </div>
-                <div class="col-lg-2">
-                    <a href="/doc/soft/#docs/linux"><i class="fa fa-linux"></i></a>
-                </div>
-                <div class="col-lg-2">
-                    <a href="/doc/soft/#docs/android"><i class="fa fa-android"></i></a>
-                </div>
-                <div class="col-lg-2">
-                    <a href="/fav/cloud/"><i class="fa fa-cloud"></i></a>
-                </div>
-                <div class="col-lg-2">
-                    <a href="https://github.com/hiclick/hiclick.github.com"><i class="fa fa-github"></i></a>
-                </div>
+            <tr>
+                <td><a href="http://mobile.pconline.com.cn/review/0806/1325149.html" target="_blank">Dopod Diamond
+                    Emulator</a></td>
+                <td>ActionScript 3.0</td>
+                <td>Code</td>
+            </tr>
 
+            <tr>
+                <td>Meeting Room</td>
+                <td>Java + Spring2.5 + ExtJS + jQuery + MySQL</td>
+                <td>Code</td>
+            </tr>
+
+            <tr>
+                <td>Work Orders</td>
+                <td> Java + Spring2.5 + OpenJPA + Resin + Oracle</td>
+                <td>PM</td>
+            </tr>
+
+            <tr>
+                <td><a href="http://health.pcbaby.com.cn/" target="_blank">PCbaby Healthlib</a></td>
+                <td>Java + Spring2.5 + MySQL + Memcache</td>
+                <td>PM</td>
+            </tr>
+
+            <tr>
+                <td><a href="http://product.pcbaby.com.cn/" target="_blank">PCbaby Product</a></td>
+                <td>Java + Spring2.5 + EAV + ExtJS + MySQL + Memcache</td>
+                <td>PM</td>
+            </tr>
+
+            <tr>
+                <td>NetBench</td>
+                <td>Java + Spring3.0 + ExtJS + MySQL</td>
+                <td>PM</td>
+            </tr>
+
+            <tr>
+                <td><a href="https://github.com/chenzixin/Lucky5" target="_blank">Lucky5</a></td>
+                <td>HTML5 + CSS3 + Impress + jQuery</td>
+                <td>PM</td>
+            </tr>
+
+        </table>
+
+    </div>
+    <!--/row -->
+</div>
+<!--/container -->
+
+<div id="social">
+    <div class="container">
+        <div class="row centered">
+            <div class="col-lg-2">
+                <a href="/doc/soft/#docs/osx"><i class="fa fa-apple"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a href="/doc/soft/#docs/windows"><i class="fa fa-windows"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a href="/doc/soft/#docs/linux"><i class="fa fa-linux"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a href="/doc/soft/#docs/android"><i class="fa fa-android"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a href="/fav/cloud/"><i class="fa fa-cloud"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a href="https://github.com/hiclick/hiclick.github.com"><i class="fa fa-github"></i></a>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div id="footerwrap">
+    <div class="container">
+        <div class="row centered">
+            <div class="col-lg-4">
+                <p><b>WEB DEVELOPER & TECHNICAL SUPPORT</b></p>
+            </div>
+
+            <div class="col-lg-4">
+                <p>Living in the terrible Beijing.</p>
+            </div>
+            <div class="col-lg-4">
+                <p>admin#<a href="http://chenzixin.com">chenzixin.com</a></p>
             </div>
         </div>
     </div>
-
-    <div id="footerwrap">
-        <div class="container">
-            <div class="row centered">
-                <div class="col-lg-4">
-                    <p><b>WEB DEVELOPER & TECHNICAL SUPPORT</b></p>
-                </div>
-
-                <div class="col-lg-4">
-                    <p>Living in the terrible Beijing.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>admin#<a href="http://chenzixin.com">chenzixin.com</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
-	
+</div>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+</body>
 </html>
