--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <!-- third-generation iPad with high-resolution Retina display: -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/img/favicon144.png">
+    <!-- iPhone with high-resolution Retina display: -->
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/img/favicon114.png">
+    <!-- first- and second-generation iPad: -->
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/img/favicon72.png">
+    <!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+    <link rel="apple-touch-icon-precomposed" href="/assets/img/favicon57.png">
+    <!-- basic favicon -->
     <link rel="shortcut icon" href="/assets/img/favicon.png">
 
     <title>Global | Christen Note</title>
@@ -18,148 +27,156 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--[if lt IE 9]>
+    <script src="/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="http://libs.useso.com/js/html5shiv/3.7/html5shiv.js"></script>
-      <script src="http://libs.useso.com/js/respond.js/1.4.2/respond.min.js"></script>
+    <script src="http://libs.useso.com/js/html5shiv/3.7/html5shiv.js"></script>
+    <script src="http://libs.useso.com/js/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- Static navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+<!-- Static navbar -->
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">CHRISTEN</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">CHRISTEN</a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="work.html">Work</a></li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
     </div>
+</div>
 
 
-	<div id="headerwrap">
-	    <div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-lg-offset-3">
-					<h4>HELLO, WORLD!</h4>
-                    <h1>AUTO UPDATE</h1>
-					<h5><!--君子-->EVERY STEP HAS ITS PRINT</h5>
-				</div>
-			</div><!--/row -->
-	    </div> <!-- /container -->
-	</div><!--/headerwrap -->
-	
-	<section id="works"></section>
-	<div class="container">
-		<div class="row centered mt mb">
-			<h1>Portfolio</h1>
-			
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="doc/java/"><img src="assets/img/portfolio/java-dc.jpg" class="img-responsive"></a>
-			</div>
-            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/flash/"><img src="assets/img/portfolio/flash-c.jpg" class="img-responsive"></a>
+<div id="headerwrap">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-lg-offset-3">
+                <h4>HELLO, WORLD!</h4>
+
+                <h1>AUTO UPDATE</h1>
+                <h5><!--君子-->EVERY STEP HAS ITS PRINT</h5>
             </div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="doc/python/"><img src="assets/img/portfolio/python-c.jpg" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="doc/html/"><img src="assets/img/portfolio/html-c.jpg" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="doc/js/"><img src="assets/img/portfolio/js-c.jpg" class="img-responsive"></a>
-			</div>
-            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/css"><img src="assets/img/portfolio/css-c.jpg" class="img-responsive"></a>
+        </div>
+        <!--/row -->
+    </div>
+    <!-- /container -->
+</div>
+<!--/headerwrap -->
+
+<section id="works"></section>
+<div class="container">
+    <div class="row centered mt mb">
+        <h1>Portfolio</h1>
+
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/java/"><img src="assets/img/portfolio/java-dc.jpg" class="img-responsive"></a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/flash/"><img src="assets/img/portfolio/flash-c.jpg" class="img-responsive"></a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/python/"><img src="assets/img/portfolio/python-c.jpg" class="img-responsive"></a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/html/"><img src="assets/img/portfolio/html-c.jpg" class="img-responsive"></a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/js/"><img src="assets/img/portfolio/js-c.jpg" class="img-responsive"></a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/css"><img src="assets/img/portfolio/css-c.jpg" class="img-responsive"></a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/php/"><img src="assets/img/portfolio/php-c.jpg" class="img-responsive"></a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/db/"><img src="assets/img/portfolio/mysql-c.jpg" class="img-responsive"></a>
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/ruby/"><img src="assets/img/portfolio/ruby-c.jpg" class="img-responsive"></a>
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/ado/"><img src="assets/img/portfolio/ado-c.jpg" class="img-responsive"></a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/hard/"><img src="assets/img/portfolio/hard-c.jpg" class="img-responsive"></a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/soft/"><img src="assets/img/portfolio/soft-c.jpg" class="img-responsive"></a>
+        </div>
+    </div>
+    <!--/row -->
+</div>
+<!--/container -->
+
+<div id="social">
+    <div class="container">
+        <div class="row centered">
+            <div class="col-lg-2">
+                <a href="/fav/book"><i class="fa fa-leanpub"></i></a>
+                <!-- <a href="#"><i class="glyphicon glyphicon-book"></i></a>-->
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/php/"><img src="assets/img/portfolio/php-c.jpg" class="img-responsive"></a>
+            <div class="col-lg-2">
+                <a href="/fav/music"><i class="fa fa-music"></i></a>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/db/"><img src="assets/img/portfolio/mysql-c.jpg" class="img-responsive"></a>
+            <div class="col-lg-2">
+                <a href="/fav/photo/"><i class="fa fa-camera-retro"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a href="/fav/movie/"><i class="fa fa-film"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a href="/fav/auto/"><i class="fa fa-automobile"></i></a>
+            </div>
+            <div class="col-lg-2">
+                <a href="/fav/baby"><i class="fa fa-child"></i></a>
             </div>
 
-            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/ruby/"><img src="assets/img/portfolio/ruby-c.jpg" class="img-responsive"></a>
+        </div>
+    </div>
+</div>
+
+<div id="footerwrap">
+    <div class="container">
+        <div class="row centered">
+            <div class="col-lg-4">
+                <p><b>WEB DEVELOPER & TECHNICAL SUPPORT</b></p>
             </div>
 
-            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/ado/"><img src="assets/img/portfolio/ado-c.jpg" class="img-responsive"></a>
+            <div class="col-lg-4">
+                <p>Living in the terrible Beijing.</p>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/hard/"><img src="assets/img/portfolio/hard-c.jpg" class="img-responsive"></a>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/soft/"><img src="assets/img/portfolio/soft-c.jpg" class="img-responsive"></a>
-            </div>
-		</div><!--/row -->
-	</div><!--/container -->
-
-    <div id="social">
-        <div class="container">
-            <div class="row centered">
-                <div class="col-lg-2">
-                    <a href="/fav/book"><i class="fa fa-leanpub"></i></a>
-                    <!-- <a href="#"><i class="glyphicon glyphicon-book"></i></a>-->
-                </div>
-                <div class="col-lg-2">
-                    <a href="/fav/music"><i class="fa fa-music"></i></a>
-                </div>
-                <div class="col-lg-2">
-                    <a href="/fav/photo/"><i class="fa fa-camera-retro"></i></a>
-                </div>
-                <div class="col-lg-2">
-                    <a href="/fav/movie/"><i class="fa fa-film"></i></a>
-                </div>
-                <div class="col-lg-2">
-                    <a href="/fav/auto/"><i class="fa fa-automobile"></i></a>
-                </div>
-                <div class="col-lg-2">
-                    <a href="/fav/baby"><i class="fa fa-child"></i></a>
-                </div>
-
+            <div class="col-lg-4">
+                <p>admin#<a href="http://chenzixin.com">chenzixin.com</a></p>
             </div>
         </div>
     </div>
-
-	<div id="footerwrap">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-4">
-					<p><b>WEB DEVELOPER & TECHNICAL SUPPORT</b></p>
-				</div>
-			
-				<div class="col-lg-4">
-					<p>Living in the terrible Beijing.</p>
-				</div>
-				<div class="col-lg-4">
-                    <p>admin#<a href="http://chenzixin.com">chenzixin.com</a></p>
-				</div>
-			</div>
-		</div>
-	</div><!--/footerwrap -->
-	
+</div>
+<!--/footerwrap -->
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+</body>
 </html>
