--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
     <div class="container">
         <div class="row centered">
             <div class="col-lg-2">
-                <a href="/fav/book"><i class="fa fa-leanpub"></i></a>
+                <a href="/fav/book/"><i class="fa fa-leanpub"></i></a>
                 <!-- <a href="#"><i class="glyphicon glyphicon-book"></i></a>-->
             </div>
             <div class="col-lg-2">
-                <a href="/fav/music"><i class="fa fa-music"></i></a>
+                <a href="/fav/music/"><i class="fa fa-music"></i></a>
             </div>
             <div class="col-lg-2">
                 <a href="/fav/photo/"><i class="fa fa-camera-retro"></i></a>
@@ -147,7 +147,7 @@
                 <a href="/fav/auto/"><i class="fa fa-automobile"></i></a>
             </div>
             <div class="col-lg-2">
-                <a href="/fav/baby"><i class="fa fa-child"></i></a>
+                <a href="/fav/baby/"><i class="fa fa-child"></i></a>
             </div>
 
         </div>
