启用灰度图像

--- a/index.html
+++ b/index.html
@@ -80,47 +80,47 @@
 <!--/headerwrap -->
 
 <section id="works"></section>
-<div class="container">
+<div class="container" id="docHome">
     <div class="row centered mt mb">
         <h1>Portfolio</h1>
 
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/java/"><img src="assets/img/portfolio/java-dc.jpg" class="img-responsive"></a>
+            <a href="doc/java/"><img src="assets/img/portfolio/java-d.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/flash/"><img src="assets/img/portfolio/flash-c.jpg" class="img-responsive"></a>
+            <a href="doc/flash/"><img src="assets/img/portfolio/flash.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/python/"><img src="assets/img/portfolio/python-c.jpg" class="img-responsive"></a>
+            <a href="doc/python/"><img src="assets/img/portfolio/python.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/html/"><img src="assets/img/portfolio/html-c.jpg" class="img-responsive"></a>
+            <a href="doc/html/"><img src="assets/img/portfolio/html.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/js/"><img src="assets/img/portfolio/js-c.jpg" class="img-responsive"></a>
+            <a href="doc/js/"><img src="assets/img/portfolio/js.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/css"><img src="assets/img/portfolio/css-c.jpg" class="img-responsive"></a>
+            <a href="doc/css"><img src="assets/img/portfolio/css.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/php/"><img src="assets/img/portfolio/php-c.jpg" class="img-responsive"></a>
+            <a href="doc/php/"><img src="assets/img/portfolio/php.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/db/"><img src="assets/img/portfolio/mysql-c.jpg" class="img-responsive"></a>
-        </div>
-
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/ruby/"><img src="assets/img/portfolio/ruby-c.jpg" class="img-responsive"></a>
+            <a href="doc/db/"><img src="assets/img/portfolio/mysql.jpg" class="img-responsive"></a>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/ado/"><img src="assets/img/portfolio/ado-c.jpg" class="img-responsive"></a>
+            <a href="doc/ruby/"><img src="assets/img/portfolio/ruby.jpg" class="img-responsive"></a>
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+            <a href="doc/ado/"><img src="assets/img/portfolio/ado.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/hard/"><img src="assets/img/portfolio/hard-c.jpg" class="img-responsive"></a>
+            <a href="doc/hard/"><img src="assets/img/portfolio/hard.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/soft/"><img src="assets/img/portfolio/soft-c.jpg" class="img-responsive"></a>
+            <a href="doc/soft/"><img src="assets/img/portfolio/soft.jpg" class="img-responsive"></a>
         </div>
     </div>
     <!--/row -->
