--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
             <a href="doc/flash/"><img src="assets/img/portfolio/flash-o.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/python/"><img src="assets/img/portfolio/python-o.jpg" class="img-responsive"></a>
+            <a href="doc/ado/"><img src="assets/img/portfolio/ado-o.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
             <a href="doc/html/"><img src="assets/img/portfolio/html5-o.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/js/"><img src="assets/img/portfolio/js.jpg" class="img-responsive"></a>
+            <a href="doc/js/"><img src="assets/img/portfolio/js-o.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/css"><img src="assets/img/portfolio/css.jpg" class="img-responsive"></a>
+            <a href="doc/css"><img src="assets/img/portfolio/css-o.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
             <a href="doc/php/"><img src="assets/img/portfolio/php-o.jpg" class="img-responsive"></a>
@@ -114,7 +114,7 @@
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/ado/"><img src="assets/img/portfolio/ado-o.jpg" class="img-responsive"></a>
+            <a href="doc/python/"><img src="assets/img/portfolio/python-o.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
             <a href="doc/hard/"><img src="assets/img/portfolio/hard-o.jpg" class="img-responsive"></a>
