--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="http://chenzixin.com/">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="work.html">Work</a></li>
             </ul>
@@ -82,7 +83,7 @@
 <section id="works"></section>
 <div class="container" id="docHome">
     <div class="row centered mt mb">
-        <h1>Portfolio</h1>
+        <h1>PORTFOLIO</h1>
 
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
             <a href="doc/python/"><img src="assets/img/portfolio/python-o.jpg" class="img-responsive"></a>
