--- a/about.html
+++ b/about.html
@@ -65,6 +65,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="http://chenzixin.com/">Blog</a></li>
                 <li class="active"><a href="about.html">About</a></li>
                 <li><a href="work.html">Work</a></li>
             </ul>
