--- a/work.html
+++ b/work.html
@@ -85,7 +85,7 @@
         <ul style="margin-left:15px">
             <li>Advertising Optimization</li>
             <li>HTML5 / Flash / JavaScript / CSS</li>
-            <li>Java / Python / Groovy / PHP</li>
+            <li>Java / Python / PHP / Ruby</li>
         </ul>
 
         <h4 class="space">Brief</h4>
