--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
 <!--/aboutwrap -->
 
 <div class="container">
-    <div class="row left mt mb">
+    <div class="row left mt mb" style="margin-top:36px">
         <div class="col-lg-8 col-lg-offset-2">
             <h2>Christen</h2>
 
