--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <a href="doc/python/"><img src="assets/img/portfolio/python-o.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/soft/"><img src="assets/img/portfolio/soft-o.jpg" class="img-responsive"></a>
+            <a href="doc/soft/"><img src="assets/img/portfolio/soft-o.png" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
             <a href="doc/hard/"><img src="assets/img/portfolio/hard-o.jpg" class="img-responsive"></a>
@@ -102,7 +102,7 @@
             <a href="doc/java/"><img src="assets/img/portfolio/java-o.jpg" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/flash/"><img src="assets/img/portfolio/flash-o.jpg" class="img-responsive"></a>
+            <a href="doc/flash/"><img src="assets/img/portfolio/flash-o.png" class="img-responsive"></a>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
