--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/html/"><img src="assets/img/portfolio/html5-o.jpg" class="img-responsive"></a>
+            <a href="doc/html/"><img src="assets/img/portfolio/html5-o.png" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
             <a href="doc/js/"><img src="assets/img/portfolio/js-o.jpg" class="img-responsive"></a>
