--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/ruby/"><img src="assets/img/portfolio/ruby-o.jpg" class="img-responsive"></a>
+            <a href="doc/ruby/"><img src="assets/img/portfolio/ruby-o.png" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
             <a href="doc/php/"><img src="assets/img/portfolio/php-o.jpg" class="img-responsive"></a>
