--- a/index.html
+++ b/index.html
@@ -86,20 +86,20 @@
         <h1>PORTFOLIO</h1>
 
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/python/"><img src="assets/img/portfolio/python-o.jpg" class="img-responsive"></a>
+            <a href="doc/python/"><img src="assets/img/portfolio/python-o.png" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
             <a href="doc/soft/"><img src="assets/img/portfolio/soft-o.png" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/hard/"><img src="assets/img/portfolio/hard-o.jpg" class="img-responsive"></a>
+            <a href="doc/hard/"><img src="assets/img/portfolio/hard-o.png" class="img-responsive"></a>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/ado/"><img src="assets/img/portfolio/ado-o.jpg" class="img-responsive"></a>
+            <a href="doc/ado/"><img src="assets/img/portfolio/ado-o.png" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/java/"><img src="assets/img/portfolio/java-o.jpg" class="img-responsive"></a>
+            <a href="doc/java/"><img src="assets/img/portfolio/java-o.png" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
             <a href="doc/flash/"><img src="assets/img/portfolio/flash-o.png" class="img-responsive"></a>
@@ -109,20 +109,20 @@
             <a href="doc/ruby/"><img src="assets/img/portfolio/ruby-o.png" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/php/"><img src="assets/img/portfolio/php-o.jpg" class="img-responsive"></a>
+            <a href="doc/php/"><img src="assets/img/portfolio/php-o.png" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/db/"><img src="assets/img/portfolio/db-o.jpg" class="img-responsive"></a>
+            <a href="doc/db/"><img src="assets/img/portfolio/mysql-o.png" class="img-responsive"></a>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/html/"><img src="assets/img/portfolio/html5-o.png" class="img-responsive"></a>
+            <a href="doc/html/"><img src="assets/img/portfolio/html-o.png" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/js/"><img src="assets/img/portfolio/js-o.jpg" class="img-responsive"></a>
+            <a href="doc/js/"><img src="assets/img/portfolio/js-o.png" class="img-responsive"></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-            <a href="doc/css"><img src="assets/img/portfolio/css-o.jpg" class="img-responsive"></a>
+            <a href="doc/css"><img src="assets/img/portfolio/css-o.png" class="img-responsive"></a>
         </div>
 
     </div>
