--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <section id="works"></section>
 <div class="container" id="docHome">
     <div class="row centered mt mb">
-        <h1>PORTFOLIO</h1>
+        <h1 id="portfolio"><a href="/doc/">PORTFOLIO</a></h1>
 
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
             <a href="doc/python/"><img src="assets/img/portfolio/python-o.png" class="img-responsive"></a>
