--- a/lab/hello.html
+++ b/lab/hello.html
@@ -3,13 +3,13 @@
 <head>
     <title>Hello</title>
 
-    <link rel="stylesheet" type="text/css" href="/assets/js/ext-5.1.0/packages/ext-theme-crisp/build/resources/ext-theme-crisp-all.css">
-    <script type="text/javascript" src="/assets/js/ext-5.1.0/ext-all.js"></script>
-    <script type="text/javascript" src="/assets/js/ext-5.1.0/packages/ext-theme-crisp/build/ext-theme-crisp.js"></script>
+    <link rel="stylesheet" href="/assets/js/ext-5.1.0/packages/ext-theme-crisp/build/resources/ext-theme-crisp-all.css">
+    <script src="/assets/js/ext-5.1.0/ext-all.js"></script>
+    <script src="/assets/js/ext-5.1.0/packages/ext-theme-crisp/build/ext-theme-crisp.js"></script>
 
 </head>
 <body>
 <div id="main"></div>
-<script type ="text/javascript" src="js/hello.js"></script>
+<script src="js/hello.js"></script>
 </body>
 </html>
