--- a/lab/chart/index.html
+++ b/lab/chart/index.html
@@ -150,7 +150,9 @@
 </head>
 
 <body>
-<h3>Google Charts Offline Demo</h3> <sup><a href="list.html">ALL</a></sup>
+<h3>Google Charts Offline Demo</h3>
+<a href="list.html">ALL</a>
+
 <table>
     <tr>
         <td>
